cdn/dev/css/keyboard.css
@import 'fonts.css';

#section2 h3, #section2 h2{
  color: #B92034;
  margin-top: 10px;
}

#section2 a{
  color: #B92034;
}

#section2 h3{
  margin-top: 30px;
}

#section2 h4{
  font-weight: bold;
  margin: 10px 10px;
}

#section2 img{
  margin: 0px;
}

.lang2{
  line-height: 1.2;
  font-size: 150% !important;
}

#keymanExample{
  background: #E0E0FF;
  border: solid 2px #69B7D2;
  padding: 10px;
}

#keymanExample tr td{
  padding: 0px 30px;
}

#keymanExample tr th{
  font-weight: bold;
}

#keymanExample img{
  margin: 5px 2px 0px 2px;
  position: relative;
  top: 3px;
}

#osk .desktop.kmw-osk-inner-frame {
  background: rgb(204,204,204);
  padding: 4px 0;
}

#osk .desktop.kmw-osk-inner-frame .kmw-key-square {
  
  border-bottom: solid 2px rgb(204,204,204);
}

.highlightKeys .key-print { display: none }
.highlightKeys img {
  vertical-align: baseline;
  margin: 0 2px 0 0;
  background-image: url('../img/keys/keys3.gif');
  height: 15px; width: 15px;
  margin: 2px !important;
}

.grid tr {
    font-weight: normal;
    height: 55px;
    text-align: center;
}

td samp {
    font-size: 24pt;
}
samp {
    color: #0000FF;
    font-family: "Times New Roman";
}
.grid td, .grid th {
    border-bottom: 1px solid #DDDDDD;
    padding: 2px 5px;
}

.grid th{
  vertical-align: bottom;
  font-weight: bold;
}

.navheader{
  margin-top: 20px;
}

